<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006699"
    tools:context="com.idkteam.idk.Login">

    <include
        android:id="@+id/toolbar_intro"
        layout="@layout/toolbar" />

    <GridLayout
        android:id="@+id/EditTextGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar_intro"
        android:paddingTop="30dp"
        android:minWidth="340dp">

        <EditText
            android:id="@+id/username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@drawable/top_edittext_bg"
            android:ems="10"
            android:hint="@string/username_hint_str"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_bg" />

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:background="@drawable/bottom_edittext_bg"
            android:ems="10"
            android:hint="@string/password_hint_str"
            android:inputType="textPassword"
            android:maxLength="25"
            android:padding="20dp"
            android:textCursorDrawable="@drawable/cursor_bg" />

        <CheckBox
            android:id="@+id/remember_chkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/remember_chkBox_str"
            android:textColor="#FFFF"
            android:textSize="17sp"
            android:layout_row="2"
            android:layout_column="0" />
    </GridLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/guest_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:width="340dp"
        android:height="60dp"
        android:onClick="login_btnClicked"
        android:text="@string/login_btn_str" />

    <TextView
        android:id="@+id/guest_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:clickable="true"
        android:onClick="forgotPassword_txtClicked"
        android:text="@string/guest_txt_str"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFF" />

    <TextView
        android:id="@+id/errorLogin_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_btn"
        android:layout_alignStart="@+id/login_btn"

        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/errorLogin_lbl_str"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ec116c"
        android:visibility="invisible" />


</RelativeLayout>
