<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006699"
    tools:context=".ui.SignUp">

    <include
        android:id="@+id/toolbar_intro"
        layout="@layout/toolbar" />

    <GridLayout
        android:id="@+id/EditText_gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_intro"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:minWidth="340dp">

        <EditText
            android:text="aaaa"
            android:id="@+id/username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@drawable/top_edittext_bg"
            android:ems="10"
            android:hint="@string/username_hint_str"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:padding="20dp"
            android:maxLength="30"/>

        <EditText
            android:text="aaaa"
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:background="@drawable/middle_edittext_bg"
            android:ems="10"
            android:hint="@string/password_hint_str"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:padding="20dp"
            android:maxLength="25"/>

        <EditText
            android:text="aaaa"
            android:id="@+id/confirmPassword_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:background="@drawable/middle_edittext_bg"
            android:ems="10"
            android:hint="@string/confirmPassword_hint_str"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:padding="20dp"
            android:maxLength="25"/>

        <EditText
            android:text="a@a.a"
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:background="@drawable/bottom_edittext_bg"
            android:ems="10"
            android:hint="@string/email_hint_str"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/cursor_bg"
            android:padding="20dp"
            android:maxLength="35"/>

    </GridLayout>

    <GridLayout
        android:id="@+id/buttonsGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:minWidth="340dp">

        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:layout_row="0"
            android:height="60dp"
            android:onClick="signUp_btnClicked"
            android:text="@string/signUp_btn_str" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:height="60dp"
            android:onClick="cancel_btnClicked"
            android:text="@string/cancel_btn_str" />
    </GridLayout>


</RelativeLayout>






