<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006699"
    tools:context=".ui.Welcome">


    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:src="@mipmap/logo" />

    <GridLayout
        android:id="@+id/buttonsGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp"
        android:minHeight="200dp"
        android:minWidth="320dp">

        <Button
            android:id="@+id/goToLogin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:height="60dp"
            android:background="@drawable/welcome_button_bg"
            android:onClick="goToLogIn_btnClicked"
            android:text="@string/goToLogin_btn_str"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/goToSignUp_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:height="60dp"
            android:background="@drawable/welcome_button_bg"
            android:onClick="goToSignUp_btnClicked"
            android:text="@string/goToSignUp_btn_str"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/goToGuest_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:height="60dp"
            android:background="@drawable/welcome_button_bg"
            android:onClick="guest_btnClicked"
            android:text="@string/goToGuest_btn_str"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </GridLayout>

</RelativeLayout>
