<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006699"
    tools:context="com.idkteam.idk.ui.EditUserProfile">

    <include
        android:id="@+id/toolbar_intro"
        layout="@layout/toolbar" />

    <GridLayout
        android:id="@+id/EditText_gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_intro"
        android:layout_centerHorizontal="true"
        android:minWidth="340dp"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/edit_username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@drawable/top_edittext_bg"
            android:ems="10"
            android:hint="@string/username_hint_str"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:padding="20dp"
            android:text="aaaa"
            android:textCursorDrawable="@drawable/cursor_bg" />

        <EditText
            android:id="@+id/edit_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:background="@drawable/middle_edittext_bg"
            android:ems="10"
            android:hint="@string/password_hint_str"
            android:inputType="textPassword"
            android:maxLength="25"
            android:padding="20dp"
            android:text="aaaa"
            android:textCursorDrawable="@drawable/cursor_bg" />

        <EditText
            android:id="@+id/edit_confirmPassword_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:background="@drawable/middle_edittext_bg"
            android:ems="10"
            android:hint="@string/confirmPassword_hint_str"
            android:inputType="textPassword"
            android:maxLength="25"
            android:padding="20dp"
            android:text="aaaa"
            android:textCursorDrawable="@drawable/cursor_bg" />

        <EditText
            android:id="@+id/edit_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:background="@drawable/bottom_edittext_bg"
            android:ems="10"
            android:hint="@string/email_hint_str"
            android:inputType="textEmailAddress"
            android:maxLength="35"
            android:padding="20dp"
            android:text="a@a.a"
            android:textCursorDrawable="@drawable/cursor_bg" />

    </GridLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/edit_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save"
            android:background="@drawable/save_and_cancel_button_bg"/>

        <Button
            android:id="@+id/edit_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:background="@drawable/save_and_cancel_button_bg"
            android:onClick="edit_cancel_btnClicked"/>
    </LinearLayout>

</RelativeLayout>
